# openapi/index.yaml
@@ -32,6 +32,62 @@ paths:
         400:
           $ref: '#/responses/400HtmlBadRequest'
 
+  /admin/clients:
+    post:
+      operationId: createClients
+      summary: Create a client
+      parameters:
+        - name: organizationId
+          description: The client organization
+          in: query
+          required: false
+          type: string
+        - name: serviceId
+          description: The client service
+          in: query
+          required: false
+          type: string
+      responses:
+        200:
+          $ref: '#/responses/200ClientResponse'
+        500:
+          $ref: '#/responses/500InternalServerError'
+    get:
+      operationId: getClients
+      summary: List clients
+      parameters:
+        - $ref: '#/parameters/queryOrganizationId'
+        - $ref: '#/parameters/queryServiceId'
+      responses:
+        200:
+          $ref: '#/responses/200ClientListResponse'
+        500:
+          $ref: '#/responses/500InternalServerError'
+
+  /admin/clients/{clientId}:
+    parameters:
+      - $ref: '#/parameters/pathClientId'
+    get:
+      operationId: detailClient
+      summary: Return a client details
+      responses:
+        200:
+          $ref: '#/responses/200ClientListResponse'
+        404:
+          $ref: '#/responses/404NotFound'
+        500:
+          $ref: '#/responses/500InternalServerError'
+    delete:
+      operationId: deleteClient
+      summary: Remove a client
+      responses:
+        200:
+          $ref: '#/responses/200ClientListResponse'
+        404:
+          $ref: '#/responses/404NotFound'
+        500:
+          $ref: '#/responses/500InternalServerError'
+
   /.well-known/openid-configuration:
     get:
       operationId: openidConfiguration
@@ -62,6 +118,24 @@ paths:
             $ref: '#/definitions/ProblemJson'
 
 parameters:
+  pathClientId:
+    name: clientId
+    in: path
+    required: true
+    description: The identifier of a client
+    type: string
+  queryOrganizationId:
+    name: organizationId
+    description: The client organization
+    in: query
+    required: false
+    type: string
+  queryServiceId:
+    name: serviceId
+    description: The client service
+    in: query
+    required: false
+    type: string
   queryResponseType:
     name: response_type
     in: query
@@ -133,6 +207,87 @@ parameters:
         - form_post
 
 definitions:
+  APIClientDefinition:
+    type: object
+    required:
+    - redirect_uris
+    - organization
+    - service_id
+    properties:
+      redirect_uris:
+        type: array
+        description: REQUIRED. Array of Redirection URI values used by the Client. One of these registered Redirection URI values MUST exactly match the redirect_uri parameter value used in each Authorization Request
+        items:
+          type: string
+      response_types:
+        type: array
+        description: JSON array containing a list of the OAuth 2.0 response_type values that the Client is declaring that it will restrict itself to using. If omitted, the default is that the Client will use only the code Response Type.
+        items:
+          type: string
+      grant_types:
+        type: array
+        description: JSON array containing a list of the OAuth 2.0 Grant Types that the Client is declaring that it will restrict itself to using. Values used by OpenID Connect are authorization_code, implicit and refresh_token
+        items:
+          type: string
+      application_type:
+        type: string
+        description: Kind of the application. The default, if omitted, is web. The defined values are native or web.
+      client_name:
+        type: string
+        description: Name of the Client to be presented to the End-User.
+      logo_uri:
+        type: string
+        description: URL that references a logo for the Client application.
+      subject_type:
+        type: string
+        description: subject_type requested for responses to this Client. The subject_types_supported Discovery parameter contains a list of the supported subject_type values for this server. Valid types include pairwise and public.
+      scope:
+        type: array
+        description: String containing a space-separated list of scope values
+        items:
+          type: string
+      organization:
+        type: string
+        description: The organization which this client belongs to
+      service_id:
+        type: string
+        description: The service which this client belongs to
+  APIClientDetail:
+    allOf:
+    - $ref: '#/definitions/APIClientDefinition'
+    - type: object
+      required:
+      - client_id
+      properties:
+        client_id:
+          type: string
+          description: REQUIRED. Unique Client Identifier. It MUST NOT be currently valid for any other registered Client.
+        client_secret:
+          type: string
+          description: Client Secret. The same Client Secret value MUST NOT be assigned to multiple Clients. This value is used by Confidential Clients to authenticate to the Token Endpoint.
+        registration_access_token:
+          type: string
+          description: Registration Access Token that can be used at the Client Configuration Endpoint to perform subsequent operations upon the Client registration.
+        registration_client_uri:
+          type: string
+          description: Location of the Client Configuration Endpoint where the Registration Access Token can be used to perform subsequent operations upon the resulting Client registration. Implementations MUST either return both a Client Configuration Endpoint and a Registration Access Token or neither of them.
+        client_id_issued_at:
+          type: string
+          description: Time at which the Client Identifier was issued. Its value is a JSON number representing the number of seconds from 1970-01-01T0:0:0Z as measured in UTC until the date/time.
+        client_secret_expires_at:
+          type: integer
+          format: int64
+          description: if client_secret is issued. Time at which the client_secret will expire or 0 if it will not expire. Its value is a JSON number representing the number of seconds from 1970-01-01T0:0:0Z as measured in UTC until the date/time.
+  APIClientList:
+    description: List of provider clients
+    type: object
+    properties:
+      items:
+        type: array
+        items:
+          $ref: "#/definitions/APIClientDetail"
+    required:
+      - items
   GetInfo:
     type: object
     properties:
@@ -282,6 +437,14 @@ definitions:
     $ref: "https://raw.githubusercontent.com/pagopa/io-functions-commons/v22.2.1/openapi/definitions.yaml#/ProblemJson"
 
 responses:
+  200ClientResponse:
+    description: Detail of a client
+    schema:
+      $ref: "#/definitions/APIClientDetail"
+  200ClientListResponse:
+    description: List of clients
+    schema:
+      $ref: "#/definitions/APIClientList"
   200AuthenticationResponse:
     description: >-
       This response is returned if the chosen response_mode was form_post. In this case the authorization Response parameters are encoded as HTML form values that are auto-submitted in the User Agent, and thus are transmitted via the HTTP POST method to the Client, with the result parameters being encoded in the body using the application/x-www-form-urlencoded format.
@@ -350,6 +513,10 @@ responses:
     schema:
       type:
         string
+  404NotFound:
+    description: The requested entity is not found
+    schema:
+      $ref: '#/definitions/ProblemJson'
   500InternalServerError:
     description: Unknown error
     headers:
